manifests/arr-stack/radarr/httproute.yaml
# Radarr HTTPRoute
# Routes: radarr.k8s.rommelporras.com -> radarr:7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: arr-stack
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "radarr.k8s.rommelporras.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
